cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/Ad__c.object-meta.xml
<CustomObject>
    <label>Ad</label>
    <nameField>
        <displayFormat>AD-{000000000}</displayFormat>
        <label>Advertise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>