cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Ads</relationshipLabel>
    <relationshipName>Ads</relationshipName>
    <type>Lookup</type>
</CustomField>