cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>