cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <label>UTM Content</label>
    <length>50</length>
    <type>Text</type>
</CustomField>