cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <length>50</length>
    <type>Text</type>
</CustomField>