cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/fields/UTM_Referer__c.field-meta.xml
<CustomField>
    <fullName>UTM_Referer__c</fullName>
    <label>UTM Referer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>