cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>