cohort3/triforciacohort3pack/force-app/main/default/objects/Ad__c/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <label>UTM Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>